@@ -20,6 +20,7 @@ Revision history for Perl extension Apache::Gallery.
 	- Nice new layout (Thomas Kjaer)
 	- New option GalleryEXIFMode to control the way EXIF
 	  info is displayed. See docs for details (Michael Legart)
+	- Support for the FNumber EXIF value (Thomas Corell)
 
 0.6 Tue Apr 22 10:24:40 CEST 2003
 
